@@ -1,0 +1,9 @@
+Title: Web API: Always output full traceback in case of non Check_MK unhandled exceptions
+Level: 1
+Component: multisite
+Compatible: compat
+Version: 1.4.0i3
+Date: 1480674286
+Class: feature
+
+
