@@ -48,6 +48,7 @@
     * 4106 new filter host/service-service-level...
     * 4107 Now you are able to search for check plugins
     * 3997 New metric for mrpe/check_icmp...
+    * 4083 Web API: Always output full traceback in case of non Check_MK unhandled exceptions
     * 3974 FIX: Sorting comments in hover menu of comments icon by time now
     * 4040 FIX: Fix error in view about "No WATO folder ..." in case of host imported via cmcdump...
     * 4046 FIX: Repaired html rendering....
